<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:layout_gravity="center"
android:background="@color/white"
tools:context=".LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:gravity="center">

    <ImageView
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:src="@drawable/gmail"
        android:layout_gravity="bottom"
        />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:hint="@string/etUsuario"
                android:inputType="text"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/etContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:hint="@string/etContrasena"
                android:inputType="textPassword"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/txtRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50px"
                android:text="@string/txtRegistrar"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/blueGmail"/>


            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20px"
                android:backgroundTint="@color/blueGmail"
                android:textColor="@color/white"
                android:text="@string/btnIniciar"
                android:textSize="25sp"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

    </LinearLayout>
</LinearLayout>
</LinearLayout>
